# disinfection

./: CMakeLists.txt  Makefile  disinfection.py  disinfection_world.xml  heightmap.cpp  heightmap.h  helper.cpp  helper.h  keys.off  lumps.FCStd1  main.cpp  main.py  merge_planes.cpp  merge_planes.h  merge_triangle_mesh.cpp  merge_triangle_mesh.h  mesh.py  plan_test.py  plane.FCStd  plane.FCStd1  plane.cpp  plane.h  plane.off  plane.pcd  plane_extract.py  plane_finder.cpp  plane_finder.h  pybind.cpp  rod.off  sample_point.h  smallerplane.off  smallplane.off  sphere.off  srod.FCStd  srod.FCStd1  tinytm.FCStd  wiper.FCStd1  wiper.h  wiper.rob  wiper_handle.FCStd  (+2 more)
meshes/: key.FCStd  key.FCStd1  knurledplane.FCStd  knurledplane.off  lumps.FCStd  lumps.off  rod.FCStd  rod.FCStd1  sphere.FCStd  sphere.FCStd1  srod.off  tinytm.FCStd1  tinytm.off  wiper.FCStd  wiper.off  wiper_handle.FCStd1
